--- a/site/style.css
+++ b/site/style.css
@@ -1,10 +1,13 @@
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 
 :root{
     --corBackground: #D0E4FC;
     --corNavEFooter: #1C569A;
     --corAmareloEscuro: #E0B943;
     --corAmareloClaro: #F1DA95;
+    --corAmareloHover: rgb(243, 199, 123);
+    --fontPrincipal: 'Roboto'; 
 }
 
 *{
@@ -21,59 +24,132 @@ html, body{
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    font-family: 'Roboto';
 }
 body nav{
     width: 100%;
-    height: 100px;
+    height: 15vh;
+    min-height: 80px;
     background-color: var(--corNavEFooter);
 }
-main header{
+main{
     width: 100%;
     height: auto;
-    border: 2px solid black;
     display: flex;
     flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+main header{
+    width: 90%;
+    min-width: 320px;
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: start
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 main header section{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: start;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0px 20px;
+}
+main header section h1{
+    font-size: 2.3rem;
+    text-align: center;
 }
 main header section div{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    justify-content: start;
+    justify-content: center;
+    margin: 5px;
+}
+main header section div #tema{
+    border: 1px solid black;
+    padding: 5px 20px;
+    margin: 5px;
+    text-align: center;
+}
+main header section div p{
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+}
+main header section p{
+    margin: 10px;
 }
 main header figure{
-    border: 2px solid black;
-    height: auto;
-    width: 100px;
+    border: 1px solid black;
+    min-height: 200px;
+    width: 85%;
+    min-width: 200px;
+    margin: 20px 30px;
+}
+main header a{
+    display: block;
+    width: auto;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    background-color: var(--corAmareloClaro);
+    color: #000000;
+    text-decoration: none;
+}
+main header a:hover{
+    background-color: var(--corAmareloHover);
+    color: #000000;
+    box-shadow: 2.5px 2.5px 2.5px #00000050;
 }
 
 main #categorias{
-    width: 100%;
-    height: auto;
-    border: 2px solid black;
+    width: 90%;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
+    margin: 10px;
+    background-color: var(--corAmareloEscuro);
 }
-
+main #categorias p{
+    font-size: 1.7rem;
+}
+main #categorias article{
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    text-align: center;
+}
+main #categorias article a{
+    width: 100px;
+    padding: 10px;
+    margin: 10px;
+    color: #000000;
+    background-color: var(--corAmareloClaro);
+}
 main #Materias{
     width: 100%;
-    height: auto;
-    border: 2px solid black;
-    display: flex;
-    flex-wrap: nowrap;
+    min-width: 320px;
+    display: none;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
+    border: 1px solid black;
+    
 }
 main #Materias div{
     display: flex;
@@ -94,7 +170,8 @@ main #Materias article figure{
     border: 2px solid black;
 }
 footer{
-    width: 100%;
-    height: 100px;
+    width: 100vw;
+    height: 15vh;
+    min-height: 80px;
     background-color: var(--corNavEFooter);
 }
