--- a/CSS/materias.css
+++ b/CSS/materias.css
@@ -29,26 +29,29 @@ body nav{
     width: 100%;
     height: 15vh;
     min-height: 80px;
+    max-height: 150px;
     background-color: var(--corAzulMaisEscuro);
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 15px;
 }
 nav span{
     width: 50%;
 }
 nav a{
-    width: 50%;
+    width: 30%;
+    height: 100%;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-nav img{
-    width: 200px;
+nav a img{
+    height: 100%;
 }
 main{
     width: 100%;
