--- a/Remasterização/CSS/Responsividade.css
+++ b/Remasterização/CSS/Responsividade.css
@@ -26,38 +26,43 @@
     }
 }
 @media (min-width: 767px){
-    header {
+    header{
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding: 20px 0px;
     }
     header h1{
-        width: 35%;
+        width: 50%;
         text-align: center;
         font-size: 1.75rem;
     }
-    header figure{
-        width: 55%;
-        min-width: 200px;
+    header #LogoG{
+        height: 150px;
+        width: auto;
     }
     #categorias article a{
         width: 50%;
         max-width: 250px;
     }
-    #Materias article{
-        width: 70%;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+    #Materias{
+        margin: 0;
+        padding: 0;
     }
-    #Materias aside{
+    #Materias article{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    #Materias article a{
+        width: auto;
+        margin: 20px 20px 0 0;
+    }
+    #Materias article aside{
         background-color: aliceblue;
-        height: auto;
-        width: 20%;
+        height: 100%;
+        width: 100%;
         display: block;
     }
     #Materias a{
@@ -66,10 +71,68 @@
     #Materias article #asideMobile{
         display: none;
     }
+    #Newsletter{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    #Newsletter div{
+        width: 50%;
+    }
+    #Newsletter form{
+        width: 50%;
+    }
+    #Newsletter form input{
+        width: 300px;
+        height: 40px;
+        margin: 10px;
+        padding: 5px;
+        border: 1px solid #94d8ff;
+        border-radius: 5px;
+    }
+    footer #container{
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 @media (min-width: 1024px){
     header{
         max-width: 1000px;
         max-height: 300px;
+    }
+    header #LogoG{
+        height: 200px;
+        width: auto;
+    }
+    #categorias{
+        max-width: 1000px;
+    }
+    #categorias article a{
+        width: 150px;
+    }
+    #Materias{
+        max-width: 1000px;
+        padding: 0;
+    }
+    #Materias a{
+        padding: 0;
+        margin: 10px 0px 0px 0px;
+    }
+    #Newsletter{
+        padding: 20px;
+    }
+    #Newsletter div{
+        max-width: 40%;
+    }
+    #Newsletter form{
+        max-width: 40%;
+    }
+    footer #container{
+        max-width: 1000px;
     }
 }
