--- a/Remasterização/CSS/Responsividade.css
+++ b/Remasterização/CSS/Responsividade.css
@@ -15,7 +15,9 @@
     }
     nav ul li{
         width: 100%;
-        margin: 50px 0;
+        padding: 20px 0;
+        margin: 0;
+        border: 2px solid #94d8ff;
     }
     nav ul li a {
         width: 100%;
