--- a/Remasterização/CSS/Responsividade.css
+++ b/Remasterização/CSS/Responsividade.css
@@ -17,7 +17,6 @@
         width: 100%;
         padding: 20px 0;
         margin: 0;
-        border: 2px solid #94d8ff;
     }
     nav ul li a {
         width: 100%;
@@ -76,11 +75,11 @@
     #Newsletter{
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
     }
     #Newsletter div{
-        width: 50%;
+        width: 40%;
     }
     #Newsletter form{
         width: 50%;
@@ -129,12 +128,18 @@
         padding: 20px;
     }
     #Newsletter div{
-        max-width: 40%;
+        width: 40%;
     }
     #Newsletter form{
-        max-width: 40%;
+        width: 40%;
     }
-    footer #container{
-        max-width: 1000px;
+    footer #containerF{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 20px;
+        font-size: 1rem;
     }
 }
