--- a/Remasterização/CSS/style.css
+++ b/Remasterização/CSS/style.css
@@ -1,11 +1,22 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@font-face{
+    font-family:'Archivo_Narrow';
+    src: url('../Fonts/Archivo_Narrow/ArchivoNarrow-VariableFont_wght.ttf') format('opentype');
+    font-style: normal;
+}
+@font-face{
+    font-family:'Montserrat';
+    src: url('../Fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('opentype');
+    font-style: normal;
+    font-weight: 600;
+}
 
 :root{
     --corBackground: #D0E4FC;
     --corAzulMaisEscuro: #9BC0EB;
     --corBotao:#4481C5;
-    --fontPrincipal: 'Roboto'; 
+    --fontTexto: 'Archivo_Narrow';
+    --fontTitulo: 'Montserrat';
 }
 
 *{
@@ -23,7 +34,12 @@ body{
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    font-family: 'Roboto';
+}
+body p, a{
+    font-family:var(--fontTexto);
+}
+body h1,h2,h3,h4,h5,h6{
+    font-family:var(--fontTitulo);
 }
 body::-webkit-scrollbar {
     width: 10px;
@@ -58,7 +74,7 @@ nav ul li{
     margin: 0 10px;
 }
 nav ul li a{
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     font-size: 1.3em;
     margin: 8px 15px;
@@ -70,6 +86,7 @@ nav ul li a{
 }
 nav ul li a.active,
 nav ul li a:hover{
+    color: #000000;
     transition: 0.3s;
     background-size: 100% 2px;
     text-shadow: 2px 3px 10px #4480c5c4;
@@ -88,31 +105,9 @@ main{
     justify-content: center;
     align-items: center;
 }
-header{
-    width: 90%;
-    height: auto;
-    min-width: 320px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-header h1{
-    width: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-    margin: 10px
-}
-header #LogoG{
-    width: 100%;
-}
 #container{
     position: relative;
     width: 100%;
-    min-height: 200px;
-    max-height: 450px;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
@@ -122,7 +117,6 @@ header #LogoG{
 }
 #slider {
     width: 100%;
-    height: 100%;
     display: flex;
     transition: transform 0.3s ease-in-out;
     flex-direction: row;
@@ -153,7 +147,8 @@ header #LogoG{
     align-items: start;
 }    
 #texto h2{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    font-weight: bolder;
 }
 #texto div{
     display: flex;
@@ -172,16 +167,18 @@ header #LogoG{
     padding: 5px;
     margin: 5px;
     text-align: center;
+    font-size: 0.8rem;
 }
 #texto p{
     margin: 10px;
+    font-size: 0.8rem;
 }
 #seta-anterior,
 #seta-proxima {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0);
+    background-color: #00000000;
     color: #ffffff;
     border: none;
     padding: 10px;
@@ -340,6 +337,7 @@ header #LogoG{
     margin: 5px;
 }
 #Newsletter span{
+    font-size: 1.75rem;
 }
 #Newsletter form{
     width: 100%;
@@ -359,14 +357,15 @@ header #LogoG{
 }
 footer{
     width: 100%;
-    text-align: center;
     padding: 15px;
     background-color: var(--corAzulMaisEscuro);
 }
 footer p{
     font-size: 0.9rem;
+    margin-top: 20px;
+    text-align: center;
 }
-footer #container{
+footer #containerF{
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -376,7 +375,29 @@ footer #container{
     padding: 0px 20px;
     font-size: 1rem;
 }
-#map {
+footer #Empresa{
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+}
+footer #Empresa img{
+    width: 250px;
+}
+footer #map{
     height: 200px;
     width: 100%;
-  }
+    padding: 5px;
+}
+footer #Contatos{
+    width: 100%;
+    margin: 10px;
+}
+footer #Contatos img{
+    width: 25px;
+}
+footer #Contatos p{
+    display: inline;
+}
+footer #Direitos{
+    text-align: center;
+}
