--- a/CSS/Resposividade/MateriaR.css
+++ b/CSS/Resposividade/MateriaR.css
@@ -127,7 +127,7 @@
         padding: 0;
     }
     #Materias a{
-        padding: 0;
+        padding: 5px;
         margin: 10px 0px 0px 0px;
     }
     #Newsletter{
