--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -35,7 +35,7 @@ body{
     justify-content: start;
     align-items: center;
 }
-body p, a{
+body p, a, ul, li, strong{
     font-family:var(--fontTexto);
 }
 body h1,h2,h3,h4,h5,h6{
@@ -54,6 +54,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 20px;
 }
 body nav{
+    position: sticky;
     width: 100%;
     height: 80px;
     background-color: var(--corAzulMaisEscuro);
@@ -62,6 +63,7 @@ body nav{
     align-items: center;
     padding: 5px 15px;
     box-shadow: 1px 1px 20px #9BC0EB;
+    position: sticky;
 }
 nav img{
     height: 100%;
@@ -159,13 +161,13 @@ main{
 }
 #texto{
     background-color: #ffffffb2;
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    padding: 10px;
+    padding: 5px 10px;
     box-shadow: 5px 5px 5px #00000030;
 }    
 #texto h2{
@@ -259,7 +261,7 @@ main{
     text-align: center;
 }
 #categorias article a{
-    width: 40%;
+    width: 100%;
     max-width: 175px;
     padding: 10px;
     margin: 10px;
@@ -300,18 +302,46 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 0px;
+    border: 3px solid var(--corBotao);
+    border-radius: 5px;
+    padding: 5px;
     margin: 20px 0px;
-    border: 1px solid #000000;
     color: #000000;
     text-decoration: none;
 }
-#Materias a img{
+#Materias a .imgMateria{
     height: 50%;
     width: 100%;
-    border-bottom: 2px solid #000000;
     margin-bottom: 10px;
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px 5px 0px 0px;
 }
+#M4{
+    background-image: url('../IMG/Materia4.jpg');
+}
+
+#M5{
+    background-image: url('../IMG/Materia5.jpg');
+}
+
+#M6{
+    background-image: url('../IMG/Materia6.jpg');
+}
+
+#M7{
+    background-image: url('../IMG/Materia7.jpg');
+}
+
+#M8{
+    background-image: url('../IMG/Materia8.jpg');
+}
+
+#M9{
+    background-image: url('../IMG/Materia9.jpg');
+}
+  
 #Materias a p{
     height: auto;
     width: auto;
@@ -380,7 +410,7 @@ footer #containerF{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 0px 20px;
     font-size: 1rem;
