--- a/CSS/padrão.css
+++ b/CSS/padrão.css
@@ -35,7 +35,7 @@ body{
     justify-content: start;
     align-items: center;
 }
-body p, a{
+body p, a, ul, li, strong{
     font-family:var(--fontTexto);
 }
 body h1,h2,h3,h4,h5,h6{
