--- a/CSS/materias.css
+++ b/CSS/materias.css
@@ -12,7 +12,7 @@
 }
 
 :root{
-    --corBackground: #D0E4FC;
+    --corBackground: #D7E5FF;
     --corAzulMaisEscuro: #9BC0EB;
     --corBotao:#4481C5;
     --fontTexto: 'Archivo_Narrow';
