--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -12,7 +12,7 @@
 }
 
 :root{
-    --corBackground: #D0E4FC;
+    --corBackground: #D7E5FF;
     --corAzulMaisEscuro: #9BC0EB;
     --corBotao:#4481C5;
     --fontTexto: 'Archivo_Narrow';
@@ -93,6 +93,10 @@ nav ul li a:hover{
     background-size: 100% 2px;
     text-shadow: 2px 3px 10px #4480c5c4;
 }
+#Ativado{
+    text-shadow: 2px 3px 10px #4480c5c4;
+    color: #000000;
+}
 nav #MenuHam{
     cursor: pointer;
     height: 50px;
@@ -140,6 +144,8 @@ main{
     text-decoration: none;
     flex: 0 0 100%;
     transition: opacity 2s ease;
+    box-shadow: 0px 2px 20px #4481C55e;
+    z-index: -10;
 }
 #S1{
     background-image: url('../IMG/Materia1Banner.jpg');
@@ -264,10 +270,16 @@ main{
     width: 100%;
     max-width: 175px;
     padding: 10px;
-    margin: 10px;
-    color: #000000;
+    font-size: 1em;
+    margin: 10px 15px;
+    color: #ffffff;
     text-decoration: none;
     background-color: var(--corBotao);
+    border: 5px solid var(--corBotao);
+}
+#categorias article a:hover{
+    background-color: #00000000;
+    color: #000000;
 }
 #Materias{
     width: 90%;
@@ -291,32 +303,51 @@ main{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 #Materias a{
     width: 100%;
-    height: 250px;
+    max-width: 450px;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     border: 3px solid var(--corBotao);
-    border-radius: 5px;
     padding: 5px;
     margin: 20px 0px;
     color: #000000;
     text-decoration: none;
 }
-#Materias a .imgMateria{
-    height: 50%;
+#Materias a:hover{
+    box-shadow: 5px 5px 15px #0000004a;
+}
+#Materias .imgMateria{
+    height: 100px;
     width: 100%;
     margin-bottom: 10px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#M1{
+    background-image: url('../IMG/Materia1.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 5px 5px 0px 0px;
+}
+#M2{
+    background-image: url('../IMG/Materia2.jpg');
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#M3{
+    background-image: url('../IMG/Materia3.jpg');
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #M4{
     background-image: url('../IMG/Materia4.jpg');
