--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -63,8 +63,8 @@ body nav{
     align-items: center;
     padding: 5px 15px;
     box-shadow: 1px 1px 20px #9BC0EB;
-    position: sticky;
-}
+    top: 0;
+}   
 nav img{
     height: 100%;
 }
@@ -145,7 +145,6 @@ main{
     flex: 0 0 100%;
     transition: opacity 2s ease;
     box-shadow: 0px 2px 20px #4481C55e;
-    z-index: -10;
 }
 #S1{
     background-image: url('../IMG/Materia1Banner.jpg');
@@ -203,16 +202,15 @@ main{
     cursor: pointer;
     font-size: 24px;
     transition: opacity 0.3s;
-    z-index: 1;
     height: 90%;
     text-align: center;
     font-size: 2.5em;
     font-weight: 700;
+    z-index: 1;
 }
 #seta-anterior {
     left: 0;
     opacity: 0;
-
 }
 
 #seta-proxima {
@@ -298,6 +296,14 @@ main{
     flex-direction: row;
     justify-content: space-around;
 }
+#Materias .asideMobile{
+    width: 100%;
+    max-width: 450px;
+    display: block;
+    padding: 5px;
+    margin: 20px 0px;
+    height: 200px;
+}
 #Materias article{
     width: 100%;
     display: flex;
@@ -323,6 +329,7 @@ main{
 #Materias a:hover{
     box-shadow: 5px 5px 15px #0000004a;
 }
+
 #Materias .imgMateria{
     height: 100px;
     width: 100%;
