Finalização das matérias

--- a/CSS/Resposividade/MateriaR.css
+++ b/CSS/Resposividade/MateriaR.css
@@ -1,5 +1,5 @@
-@media (max-width: 767px){
-    nav ul{
+@media (max-width: 767px) {
+    nav ul {
         position: fixed;
         top: 80px;
         left: -100%;
@@ -11,80 +11,108 @@
         transition: all 0.3s ease;
         z-index: 1;
     }
-    nav ul.open{
+
+    nav ul.open {
         left: 0;
     }
-    nav ul li{
+
+    nav ul li {
         width: 100%;
         padding: 20px 0;
         margin: 0;
     }
+
     nav ul li a {
         width: 100%;
         font-size: 1.5em;
     }
-    nav #MenuHam{
+
+    nav #MenuHam {
         display: block;
     }
 }
-@media (min-width: 767px){
-    header{
+
+@media (min-width: 767px) {
+    header {
         width: 90%;
         text-align: center;
         margin: 10px 0;
     }
-    header h3{
+
+    header h3 {
         padding: 10px 0;
     }
-    header figure{
+
+    header figure {
         width: 100%;
         max-width: 700px;
     }
-    header figure img{
+
+    header figure img {
         width: 100%;
     }
-    #TextoMateria{
+
+    #TextoMateria {
         width: 90%;
         margin: 20px 0;
+        display: flex;
+        flex-direction: row;
     }
-    #Materias{
-        margin: 0;
-        padding: 0;
+    #TextoMateria article{
+        width: 70%; 
     }
-    #Materias article{
+    #TextoMateria aside{
+        height: 100%;
+        width: 30%;
+        background-color: aliceblue;
+    }
+
+    #Materias {
+        width: 90%;
+    }
+
+    #Materias article {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    #Materias article a{
+
+    #Materias article a {
         width: auto;
         margin: 20px 20px 0 0;
     }
-    #Materias article aside{
+
+    #Materias article aside {
         background-color: aliceblue;
         width: auto;
         height: 90%;
         margin: 20px 20px 0 0;
         display: block;
     }
-    #Materias a{
+
+    #Materias a {
         width: 40%;
     }
-    #Materias article #asideMobile{
+
+    #Materias article #asideMobile {
         display: none;
     }
-    #Newsletter{
+
+    #Newsletter {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
     }
-    #Newsletter div{
+
+    #Newsletter div {
         width: 40%;
     }
-    #Newsletter form{
+
+    #Newsletter form {
         width: 50%;
     }
-    #Newsletter form input{
+
+    #Newsletter form input {
         width: 300px;
         height: 40px;
         margin: 10px;
@@ -92,7 +120,8 @@
         border: 1px solid #94d8ff;
         border-radius: 5px;
     }
-    footer #container{
+
+    footer #container {
         width: 100%;
         display: flex;
         flex-wrap: nowrap;
@@ -100,46 +129,69 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    footer p {
+        font-size: 0.9rem;
+    }
 }
-@media (min-width: 1024px){
-    header{
+
+@media (min-width: 1024px) {
+    header {
         width: 90%;
         text-align: center;
         margin: 10px 0;
     }
-    header figure{
+
+    header figure {
         width: 100%;
         max-width: 1000px;
     }
-    #TextoMateria{
-        width: 80%;
+
+    #TextoMateria {
+        width: 90%;
         margin: 20px 0;
         max-width: 1000px;
     }
-    #categorias{
+    #TextoMateria article{
+        width: 70%; 
+    }
+    #TextoMateria aside{
+        height: 100%;
+        width: 30%;
+        background-color: aliceblue;
+    }
+
+    #categorias {
         max-width: 1000px;
     }
-    #categorias article a{
+
+    #categorias article a {
         width: 150px;
     }
-    #Materias{
+
+    #Materias {
         max-width: 1000px;
         padding: 0;
     }
-    #Materias a{
+
+    #Materias a {
         padding: 5px;
         margin: 10px 0px 0px 0px;
     }
-    #Newsletter{
+
+    #Newsletter {
         padding: 20px;
     }
-    #Newsletter div{
+
+    #Newsletter div {
         width: 40%;
     }
-    #Newsletter form{
+
+    #Newsletter form {
         width: 40%;
     }
-    footer #containerF{
+
+    footer #containerF {
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -147,5 +199,9 @@
         align-items: center;
         padding: 0px 20px;
         font-size: 1rem;
+    }
+
+    footer p {
+        font-size: 0.9rem;
     }
 }
