--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,31 +1,33 @@
 @charset "UTF-8";
-@font-face{
-    font-family:'Archivo_Narrow';
+
+@font-face {
+    font-family: 'Archivo_Narrow';
     src: url('../Fonts/Archivo_Narrow/ArchivoNarrow-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
 }
-@font-face{
-    font-family:'Montserrat';
+
+@font-face {
+    font-family: 'Montserrat';
     src: url('../Fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
     font-weight: 600;
 }
 
-:root{
+:root {
     --corBackground: #D7E5FF;
     --corAzulMaisEscuro: #9BC0EB;
-    --corBotao:#4481C5;
+    --corBotao: #4481C5;
     --fontTexto: 'Archivo_Narrow';
     --fontTitulo: 'Montserrat';
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: var(--corBackground);
     width: 100%;
     height: 100vh;
@@ -35,25 +37,38 @@ body{
     justify-content: start;
     align-items: center;
 }
-body p, a, ul, li, strong{
-    font-family:var(--fontTexto);
+
+body p,
+a,
+ul,
+li,
+strong {
+    font-family: var(--fontTexto);
 }
-body h1,h2,h3,h4,h5,h6{
-    font-family:var(--fontTitulo);
+
+body h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--fontTitulo);
 }
+
 body::-webkit-scrollbar {
     width: 10px;
 }
-  
+
 body::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0);
 }
-  
+
 body::-webkit-scrollbar-thumb {
-    background-color: #94d8ff; 
+    background-color: #94d8ff;
     border-radius: 20px;
 }
-body nav{
+
+body nav {
     position: sticky;
     width: 100%;
     height: 80px;
@@ -64,18 +79,23 @@ body nav{
     padding: 5px 15px;
     box-shadow: 1px 1px 20px #9BC0EB;
     top: 0;
-}   
-nav img{
+    z-index: 10;
+}
+
+nav img {
     height: 100%;
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
 }
-nav ul li{
+
+nav ul li {
     margin: 0 10px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 1.3em;
@@ -86,23 +106,27 @@ nav ul li a{
     background-repeat: no-repeat;
     background-position: left 90%;
 }
+
 nav ul li a.active,
-nav ul li a:hover{
+nav ul li a:hover {
     color: #000000;
     transition: 0.3s;
     background-size: 100% 2px;
     text-shadow: 2px 3px 10px #4480c5c4;
 }
-#Ativado{
+
+#Ativado {
     text-shadow: 2px 3px 10px #4480c5c4;
     color: #000000;
 }
-nav #MenuHam{
+
+nav #MenuHam {
     cursor: pointer;
     height: 50px;
     display: none;
 }
-main{
+
+main {
     width: 100%;
     height: auto;
     display: flex;
@@ -111,7 +135,8 @@ main{
     justify-content: center;
     align-items: center;
 }
-#container{
+
+#container {
     position: relative;
     height: 400px;
     width: 100%;
@@ -122,6 +147,7 @@ main{
     justify-content: center;
     align-items: center;
 }
+
 #slider {
     width: 100%;
     height: 100%;
@@ -131,7 +157,8 @@ main{
     justify-content: space-between;
     transition: transform 1s ease;
 }
-.slide{
+
+.slide {
     height: auto;
     display: flex;
     flex-wrap: wrap;
@@ -146,25 +173,29 @@ main{
     transition: opacity 2s ease;
     box-shadow: 0px 2px 20px #4481C55e;
 }
-#S1{
+
+#S1 {
     background-image: url('../IMG/Materia1Banner.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#S2{
+
+#S2 {
     background-image: url('../IMG/Materia2Banner.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#S3{
+
+#S3 {
     background-image: url('../IMG/Materia3Banner.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#texto{
+
+#texto {
     background-color: #ffffffb2;
     width: 70%;
     display: flex;
@@ -174,22 +205,26 @@ main{
     align-items: start;
     padding: 5px 10px;
     box-shadow: 5px 5px 5px #00000030;
-}    
-#texto h2{
+}
+
+#texto h2 {
     margin: 0 10px;
     font-size: 1.2rem;
     font-weight: bolder;
 }
-#texto #tema{
+
+#texto #tema {
     border: 1px solid #000000;
     padding: 5px 20px;
     margin: 5px;
     text-align: center;
 }
-#texto p{
+
+#texto p {
     margin: 10px;
     font-size: 0.8rem;
 }
+
 #seta-anterior,
 #seta-proxima {
     position: absolute;
@@ -208,6 +243,7 @@ main{
     font-weight: 700;
     z-index: 1;
 }
+
 #seta-anterior {
     left: 0;
     opacity: 0;
@@ -222,14 +258,16 @@ main{
 #container:hover #seta-proxima {
     opacity: 1;
 }
-.indicadores{
+
+.indicadores {
     margin-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.indicador{
+
+.indicador {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -237,10 +275,12 @@ main{
     margin-right: 5px;
     cursor: pointer;
 }
-.indicador.ativo{
+
+.indicador.ativo {
     background-color: var(--corBotao);
 }
-#categorias{
+
+#categorias {
     width: 90%;
     display: flex;
     flex-wrap: nowrap;
@@ -251,10 +291,12 @@ main{
     margin: 10px;
     border: 5px solid var(--corBotao);
 }
-#categorias p{
+
+#categorias p {
     font-size: 1.7rem;
 }
-#categorias article{
+
+#categorias article {
     width: 90%;
     display: flex;
     flex-wrap: wrap;
@@ -264,7 +306,8 @@ main{
     margin: 10px;
     text-align: center;
 }
-#categorias article a{
+
+#categorias article a {
     width: 100%;
     max-width: 175px;
     padding: 10px;
@@ -275,11 +318,13 @@ main{
     background-color: var(--corBotao);
     border: 5px solid var(--corBotao);
 }
-#categorias article a:hover{
+
+#categorias article a:hover {
     background-color: #00000000;
     color: #000000;
 }
-#Materias{
+
+#Materias {
     width: 90%;
     min-width: 320px;
     display: flex;
@@ -289,14 +334,16 @@ main{
     align-items: center;
     padding: 10px;
 }
-#Materias #ComAside{
+
+#Materias #ComAside {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
 }
-#Materias .asideMobile{
+
+#Materias .asideMobile {
     width: 100%;
     max-width: 450px;
     display: block;
@@ -304,7 +351,8 @@ main{
     margin: 20px 0px;
     height: 200px;
 }
-#Materias article{
+
+#Materias article {
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -312,7 +360,8 @@ main{
     justify-content: space-around;
     align-items: center;
 }
-#Materias a{
+
+#Materias a {
     width: 100%;
     max-width: 450px;
     display: flex;
@@ -326,11 +375,12 @@ main{
     color: #000000;
     text-decoration: none;
 }
-#Materias a:hover{
+
+#Materias a:hover {
     box-shadow: 5px 5px 15px #0000004a;
 }
 
-#Materias .imgMateria{
+#Materias .imgMateria {
     height: 100px;
     width: 100%;
     margin-bottom: 10px;
@@ -338,69 +388,77 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
 }
-#M1{
+
+#M1 {
     background-image: url('../IMG/Materia1.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#M2{
+
+#M2 {
     background-image: url('../IMG/Materia2.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#M3{
+
+#M3 {
     background-image: url('../IMG/Materia3.jpg');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#M4{
+
+#M4 {
     background-image: url('../IMG/Materia4.jpg');
 }
 
-#M5{
+#M5 {
     background-image: url('../IMG/Materia5.jpg');
 }
 
-#M6{
+#M6 {
     background-image: url('../IMG/Materia6.jpg');
 }
 
-#M7{
+#M7 {
     background-image: url('../IMG/Materia7.jpg');
 }
 
-#M8{
+#M8 {
     background-image: url('../IMG/Materia8.jpg');
 }
 
-#M9{
+#M9 {
     background-image: url('../IMG/Materia9.jpg');
 }
-  
-#Materias a p{
+
+#Materias a p {
     height: auto;
     width: auto;
     margin: 10px 20px;
 }
-#Materias a .temaM{
+
+#Materias a .temaM {
     border: 2px solid #000000;
     padding: 5px;
 }
-#Materias a h4{
+
+#Materias a h4 {
     height: auto;
     width: auto;
     margin: 10px 20px;
 }
-#Materias aside{
+
+#Materias aside {
     background-color: aliceblue;
     height: auto;
     width: 30%;
     display: none;
 }
-#Newsletter{
+
+#Newsletter {
     width: 100%;
     background-color: var(--corBotao);
     display: flex;
@@ -411,13 +469,17 @@ main{
     padding: 10px;
     margin: 10px 0px;
 }
-#Newsletter h1,p{
+
+#Newsletter h1,
+p {
     margin: 5px;
 }
-#Newsletter span{
+
+#Newsletter span {
     font-size: 1.75rem;
 }
-#Newsletter form{
+
+#Newsletter form {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -425,7 +487,8 @@ main{
     justify-content: center;
     align-items: center;
 }
-#Newsletter form input{
+
+#Newsletter form input {
     width: 80%;
     height: 40px;
     margin: 10px;
@@ -433,17 +496,20 @@ main{
     border: 1px solid #94d8ff;
     border-radius: 5px;
 }
-footer{
+
+footer {
     width: 100%;
     padding: 15px;
     background-color: var(--corAzulMaisEscuro);
 }
-footer p{
+
+footer p {
     font-size: 0.9rem;
     margin-top: 20px;
     text-align: center;
 }
-footer #containerF{
+
+footer #containerF {
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -453,29 +519,36 @@ footer #containerF{
     padding: 0px 20px;
     font-size: 1rem;
 }
-footer #Empresa{
+
+footer #Empresa {
     width: 100%;
     text-align: center;
     padding: 5px;
 }
-footer #Empresa img{
+
+footer #Empresa img {
     width: 250px;
 }
-footer #map{
+
+footer #map {
     height: 200px;
     width: 100%;
     padding: 5px;
 }
-footer #Contatos{
+
+footer #Contatos {
     width: 100%;
     margin: 10px;
 }
-footer #Contatos img{
+
+footer #Contatos img {
     width: 25px;
 }
-footer #Contatos p{
+
+footer #Contatos p {
     display: inline;
 }
-footer #Direitos{
+
+footer #Direitos {
     text-align: center;
 }
