--- a/CSS/materias.css
+++ b/CSS/materias.css
@@ -1,31 +1,33 @@
 @charset "UTF-8";
-@font-face{
-    font-family:'Archivo_Narrow';
+
+@font-face {
+    font-family: 'Archivo_Narrow';
     src: url('../Fonts/Archivo_Narrow/ArchivoNarrow-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
 }
-@font-face{
-    font-family:'Montserrat';
+
+@font-face {
+    font-family: 'Montserrat';
     src: url('../Fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
     font-weight: 600;
 }
 
-:root{
+:root {
     --corBackground: #D7E5FF;
     --corAzulMaisEscuro: #9BC0EB;
-    --corBotao:#4481C5;
+    --corBotao: #4481C5;
     --fontTexto: 'Archivo_Narrow';
     --fontTitulo: 'Montserrat';
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: var(--corBackground);
     width: 100%;
     height: 100vh;
@@ -35,25 +37,39 @@ body{
     justify-content: start;
     align-items: center;
 }
-body p, a, ul, li, strong{
-    font-family:var(--fontTexto);
+
+body p,
+a,
+ul,
+li,
+strong {
+    font-family: var(--fontTexto);
 }
-body h1,h2,h3,h4,h5,h6{
-    font-family:var(--fontTitulo);
+
+body h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--fontTitulo);
 }
+
 body::-webkit-scrollbar {
     width: 10px;
 }
-  
+
 body::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0);
 }
-  
+
 body::-webkit-scrollbar-thumb {
-    background-color: #94d8ff; 
+    background-color: #94d8ff;
     border-radius: 20px;
 }
-body nav{
+
+body nav {
+    position: sticky;
     width: 100%;
     height: 80px;
     background-color: var(--corAzulMaisEscuro);
@@ -62,18 +78,23 @@ body nav{
     align-items: center;
     padding: 5px 15px;
     box-shadow: 1px 1px 20px #9BC0EB;
+    top: 0;
 }
-nav img{
+
+nav img {
     height: 100%;
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
 }
-nav ul li{
+
+nav ul li {
     margin: 0 10px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 1.3em;
@@ -84,19 +105,22 @@ nav ul li a{
     background-repeat: no-repeat;
     background-position: left 90%;
 }
+
 nav ul li a.active,
-nav ul li a:hover{
+nav ul li a:hover {
     color: #000000;
     transition: 0.3s;
     background-size: 100% 2px;
     text-shadow: 2px 3px 10px #4480c5c4;
 }
-nav #MenuHam{
+
+nav #MenuHam {
     cursor: pointer;
     height: 50px;
     display: none;
 }
-main{
+
+main {
     width: 100%;
     height: auto;
     display: flex;
@@ -105,27 +129,41 @@ main{
     justify-content: center;
     align-items: center;
 }
-header{
+
+header {
     width: 90%;
     margin: 10px 0;
     text-align: center;
 }
-header h3{
+
+header h3 {
     padding: 10px 0;
 }
-#imgG{
+
+#imgG {
     width: 100%;
     margin: auto;
 }
-header #imgG img{
+
+header #imgG img {
     width: 100%;
 }
-#TextoMateria{
+
+#TextoMateria {
     width: 90%;
-    margin: 20px 0;
+    margin: 20px 10px;
     font-size: 1.2rem;
 }
-#Materias{
+#TextoMateria article p,
+#TextoMateria article li{
+    margin: 15px;
+}
+
+#TextoMateria article ul,
+#TextoMateria article ol{
+    margin: 20px;
+}
+#Materias {
     width: 90%;
     min-width: 320px;
     display: flex;
@@ -136,14 +174,16 @@ header #imgG img{
     padding: 10px;
     margin: 0 30px;
 }
-#Materias #ComAside{
+
+#Materias #ComAside {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
 }
-#Materias article{
+
+#Materias article {
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -151,74 +191,88 @@ header #imgG img{
     justify-content: space-between;
     align-items: center;
 }
-#Materias a{
+#Materias article aside{
     width: 100%;
-    height: 250px;
+    max-width: 450px;
+    height: 200px;
+    display: block;
+}    
+#Materias a {
+    width: 100%;
+    max-width: 450px;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     border: 3px solid var(--corBotao);
-    border-radius: 5px;
     padding: 5px;
     margin: 20px 0px;
     color: #000000;
     text-decoration: none;
 }
-#Materias a .imgMateria{
-    height: 50%;
+#Materias a:hover {
+    box-shadow: 5px 5px 15px #0000004a;
+}
+
+#Materias .imgMateria {
+    height: 100px;
     width: 100%;
     margin-bottom: 10px;
-    background-position: center right;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 5px 5px 0px 0px;
 }
-#M4{
+
+#M4 {
     background-image: url('../IMG/Materia4.jpg');
 }
 
-#M5{
+#M5 {
     background-image: url('../IMG/Materia5.jpg');
 }
 
-#M6{
+#M6 {
     background-image: url('../IMG/Materia6.jpg');
 }
 
-#M7{
+#M7 {
     background-image: url('../IMG/Materia7.jpg');
 }
 
-#M8{
+#M8 {
     background-image: url('../IMG/Materia8.jpg');
 }
 
-#M9{
+#M9 {
     background-image: url('../IMG/Materia9.jpg');
 }
-#Materias a p{
+
+#Materias a p {
     height: auto;
     width: auto;
     margin: 10px 20px;
 }
-#Materias a .temaM{
+
+#Materias a .temaM {
     border: 2px solid #000000;
     padding: 5px;
 }
-#Materias a h4{
+
+#Materias a h4 {
     height: auto;
     width: auto;
     margin: 10px 20px;
 }
-#Materias aside{
+
+#Materias aside {
     background-color: aliceblue;
     height: auto;
     width: 30%;
     display: none;
 }
-#Newsletter{
+
+#Newsletter {
     width: 100%;
     background-color: var(--corBotao);
     display: flex;
@@ -229,13 +283,17 @@ header #imgG img{
     padding: 10px;
     margin: 10px 0px;
 }
-#Newsletter h1,p{
+
+#Newsletter h1,
+p {
     margin: 5px;
 }
-#Newsletter span{
+
+#Newsletter span {
     font-size: 1.75rem;
 }
-#Newsletter form{
+
+#Newsletter form {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -243,7 +301,8 @@ header #imgG img{
     justify-content: center;
     align-items: center;
 }
-#Newsletter form input{
+
+#Newsletter form input {
     width: 80%;
     height: 40px;
     margin: 10px;
@@ -251,17 +310,20 @@ header #imgG img{
     border: 1px solid #94d8ff;
     border-radius: 5px;
 }
-footer{
+
+footer {
     width: 100%;
     padding: 15px;
     background-color: var(--corAzulMaisEscuro);
 }
-footer p{
+
+footer p {
     font-size: 0.9rem;
     margin-top: 20px;
     text-align: center;
 }
-footer #containerF{
+
+footer #containerF {
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -271,29 +333,36 @@ footer #containerF{
     padding: 0px 20px;
     font-size: 1rem;
 }
-footer #Empresa{
+
+footer #Empresa {
     width: 100%;
     text-align: center;
     padding: 5px;
 }
-footer #Empresa img{
-    width: 50%;
+
+footer #Empresa img {
+    width: 250px;
 }
-footer #map{
+
+footer #map {
     height: 200px;
     width: 100%;
     padding: 5px;
 }
-footer #Contatos{
+
+footer #Contatos {
     width: 100%;
     margin: 10px;
 }
-footer #Contatos img{
+
+footer #Contatos img {
     width: 25px;
 }
-footer #Contatos p{
+
+footer #Contatos p {
     display: inline;
 }
-footer #Direitos{
+
+footer #Direitos {
     text-align: center;
 }
