--- a/CSS/padrão.css
+++ b/CSS/padrão.css
@@ -1,31 +1,33 @@
 @charset "UTF-8";
-@font-face{
-    font-family:'Archivo_Narrow';
+
+@font-face {
+    font-family: 'Archivo_Narrow';
     src: url('../Fonts/Archivo_Narrow/ArchivoNarrow-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
 }
-@font-face{
-    font-family:'Montserrat';
+
+@font-face {
+    font-family: 'Montserrat';
     src: url('../Fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('opentype');
     font-style: normal;
     font-weight: 600;
 }
 
-:root{
+:root {
     --corBackground: #D7E5FF;
     --corAzulMaisEscuro: #9BC0EB;
-    --corBotao:#4481C5;
+    --corBotao: #4481C5;
     --fontTexto: 'Archivo_Narrow';
     --fontTitulo: 'Montserrat';
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: var(--corBackground);
     width: 100%;
     height: 100vh;
@@ -35,25 +37,38 @@ body{
     justify-content: start;
     align-items: center;
 }
-body p, a, ul, li, strong{
-    font-family:var(--fontTexto);
+
+body p,
+a,
+ul,
+li,
+strong {
+    font-family: var(--fontTexto);
 }
-body h1,h2,h3,h4,h5,h6{
-    font-family:var(--fontTitulo);
+
+body h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--fontTitulo);
 }
+
 body::-webkit-scrollbar {
     width: 10px;
 }
-  
+
 body::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0);
 }
-  
+
 body::-webkit-scrollbar-thumb {
-    background-color: #94d8ff; 
+    background-color: #94d8ff;
     border-radius: 20px;
 }
-body nav{
+
+body nav {
     width: 100%;
     height: 80px;
     background-color: var(--corAzulMaisEscuro);
@@ -63,17 +78,21 @@ body nav{
     padding: 5px 15px;
     box-shadow: 1px 1px 20px #9BC0EB;
 }
-nav img{
+
+nav img {
     height: 100%;
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
 }
-nav ul li{
+
+nav ul li {
     margin: 0 10px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 1.3em;
@@ -84,23 +103,27 @@ nav ul li a{
     background-repeat: no-repeat;
     background-position: left 90%;
 }
+
 nav ul li a.active,
-nav ul li a:hover{
+nav ul li a:hover {
     color: #000000;
     transition: 0.3s;
     background-size: 100% 2px;
     text-shadow: 2px 3px 10px #4480c5c4;
 }
-#Ativado{
+
+#Ativado {
     text-shadow: 2px 3px 10px #4480c5c4;
     color: #000000;
 }
-nav #MenuHam{
+
+nav #MenuHam {
     cursor: pointer;
     height: 50px;
     display: none;
 }
-main{
+
+main {
     width: 100%;
     height: auto;
     display: flex;
@@ -109,7 +132,8 @@ main{
     justify-content: center;
     align-items: center;
 }
-#Newsletter{
+
+#Newsletter {
     width: 100%;
     background-color: var(--corBotao);
     display: flex;
@@ -120,13 +144,17 @@ main{
     padding: 10px;
     margin: 10px 0px;
 }
-#Newsletter h1,p{
+
+#Newsletter h1,
+p {
     margin: 5px;
 }
-#Newsletter span{
+
+#Newsletter span {
     font-size: 1.75rem;
 }
-#Newsletter form{
+
+#Newsletter form {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -134,7 +162,8 @@ main{
     justify-content: center;
     align-items: center;
 }
-#Newsletter form input{
+
+#Newsletter form input {
     width: 80%;
     height: 40px;
     margin: 10px;
@@ -142,6 +171,7 @@ main{
     border: 1px solid #94d8ff;
     border-radius: 5px;
 }
+
 footer {
     width: 100%;
     padding: 15px;
